# sshworm

./: .gitignore  README.md  pyproject.toml  setup.py
sshworm/: __init__.py  ssh.py
tests/: test_tunnel.py
