[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "sshworm"
dynamic=["version"]
authors = [
  { name="Nicolas Delgado", email="nicolas.delgado@cstb.fr" },
]
description = "ssh tunnel for python that uses openssh cli"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nicods-cstb/sshworm"
"Bug Tracker" = "https://github.com/nicods-cstb/sshworm/issues"